# akari

./: .gitignore  README.md  akari.yml  pyproject.toml
examples/: usecase_0_1_1_kernel_initialisation.py  usecase_0_2_1_registry_basics.py  usecase_0_2_1_registry_sklearn_iris.py  usecase_0_2_2_registry_callable_tool.py  usecase_0_2_3_registry_file_resource.py  usecase_0_3_1_task_callable_runtime.py  usecase_0_3_2_task_sklearn_runtime.py  usecase_0_3_3_task_failure_handling.py  usecase_0_4_1_policy_model_access_by_agent.py  usecase_0_4_2_policy_deny_multiply_tool.py  usecase_0_4_3_policy_deny_memory_write.py  usecase_0_5_1_memory_symbolic_write_query.py  usecase_0_5_2_memory_vector_search.py  usecase_0_5_3_memory_deny_read.py  usecase_0_6_1_observability_experiment_iris.py  usecase_0_6_2_observability_task_logs.py  usecase_0_7_1_ipc_ping_pong.py  usecase_0_7_2_ipc_planner_worker_iris.py  usecase_0_8_1_tool_summarise.py  usecase_0_8_2_tool_file_resource_with_policy.py  usecase_0_8_3_tool_http_blocked_by_policy.py  usecase_0_9_1_userland_full_iris_workflow.py  usecase_0_9_2_userland_mini_rag_demo.py  usecase_1_0_0_kernel_from_config.py  usecase_1_0_1_pytorch_resnet18_runtime.py  usecase_1_0_2_hf_llm_runtime.py  usecase_1_0_3_grand_unified_cross_framework.py
src/akari/: __init__.py  (+2 more)
tests/: test_experiments_autolog.py  test_hf_llm_runtime.py  test_identity_registry.py  test_ipc_ping_pong.py  test_ipc_planner_worker_iris.py  test_kernel_initialisation.py  test_kernel_with_registry.py  test_memory_policy_integration.py  test_memory_symbolic_store.py  test_memory_vector_store.py  test_observability_task_logs.py  test_policy_engine.py  test_pytorch_runtime.py  test_registry_and_specs.py  test_registry_sklearn_and_resources.py  test_registry_specs.py  test_run_tracking.py  test_runtimes_basic.py  test_task_executor.py  test_task_executor_policy.py  test_task_models.py  test_tools_manager_callable.py  (+2 more)
(+41 files in other folders)
