[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akari"
version = "0.1.0"
description = "AKARI: an experimental AI control-plane kernel and userland."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }

# Tạm thời chưa khai báo dependencies – sẽ thêm dần ở các version sau.
dependencies = []

[project.urls]
Homepage = "https://example.com/akari"

[tool.hatch.build.targets.wheel]
packages = ["src/akari"]
