[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akari"
version = "1.0.0"
description = "AKARI – an AI control-plane kernel and runtime orchestration layer."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Minh Quach", email = "minhquach8@gmail.com" },
]
license = { text = "MIT" }

dependencies = [
  "scikit-learn>=1.4,<2.0",
  "torch",
  "torchvision",
  "transformers",
  "pyyaml",
]

[project.urls]
Homepage = "https://example.com/akari"

[tool.setuptools.packages.find]
where = ["src"]
